import io.github.fvarrui.javapackager.gradle.PackageTask

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '3.1.1'
    id 'io.github.fvarrui.javapackager.plugin' version '1.7.6'
}

group 'homer.database'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    flatDir {
        dirs 'libs'
    }
    maven {
        url uri("${rootDir}/../local-repo")
    }
}

sourceCompatibility = '9'
targetCompatibility = '9'

plugins.withType(JavaPlugin) {
    sourceCompatibility = '9'
    targetCompatibility = '9'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    // options.compilerArgs += ['--module-path', classpath.asPath]
    sourceCompatibility = '9'
    targetCompatibility = '9'
}

application {
    mainModule = 'homer.database.gui'
    mainClass = 'homer.database.gui.HomerDataBaseApplication'
}

javafx {
    version = '22.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation 'org.slf4j:slf4j-api:1.7.36'
    implementation 'org.slf4j:slf4j-jdk14:1.7.36'
    runtimeOnly "org.openjfx:javafx-graphics:$javafx.version:$javafx.platform.classifier"

//    implementation name: 'HomerDataBase-1.0.0-backend'
//    implementation name: 'HomerDataBase-1.0.0-converter'
    implementation 'homer.database:backend:beta-1.2.0'
    implementation 'homer.database:converter:beta-1.2.0'
}

jlink {
    forceMerge 'slf4j'
    mergedModule {
        requires "java.xml"
        requires "java.desktop"
        requires "java.sql"
    }
    addExtraDependencies("javafx")
    imageZip = project.file("${buildDir}/distributions/HomerDataBase-v${version}-${javafx.platform.classifier}.zip")
    options = [
            '--strip-debug', '--no-header-files', '--no-man-pages',
//            '--module-path', "$System.env.PATH_TO_FX_MODS",
//            '--add-modules', 'javafx.controls,javafx.fxml'
    ]
    launcher {
        name = 'HomerDataBase'
    }
}

jlinkZip {
    group = 'distribution'
}

task packageToApp(type: PackageTask, dependsOn: build) {
    mainClass = application.mainClass

    outputDirectory = file("${buildDir}/distributions")
    setAppName("HomerDataBase")
    displayName = "HomerDataBase"
    organizationName = "Homer"
    jreMinVersion = targetCompatibility
//    administratorRequired = true
//    fileAssociations =
//    additionalResources = [ file('file path'), file('folder path'), ... ]
//    platform = "auto"|"linux"|"mac"|"windows"  // Default is "auto"

//    linuxConfig {
//        ...
//    }
    macConfig {
        icnsFile = file("${rootDir}/src/main/resources/homer/database/gui/AppIcon/HomerDataBaseIcon.icns")
    }
    winConfig {
        icoFile = file("${rootDir}/src/main/resources/homer/database/gui/AppIcon/HomerDataBaseIcon.ico")
        disableRunAfterInstall = false
        removeOldLibs = true
    }
}